0028130: Spelling error in description of class BOPAlgo_Section

Spelling error is corrected